# event_emitter

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yml
event_emitter/: __init__.py  event_sink.py  utils.py
event_emitter/listeners/: __init__.py  base.py  debug_logger.py  info_logger.py  logger.py  sns_topic.py
tests/: test_debug_logger.py  test_event_sink.py  test_info_logger.py  test_listener_filter.py  test_multi_listener.py
