[tool.poetry]
name = "event-emitter"
version = "0.1.0"
description = ""
authors = ["Mitchell Berendhuysen <mitchellbhuysen@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.153"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
